src/main/java/org/example/myblog/exception/Errors/ArticleError.java
package org.example.myblog.exception.Errors;

public enum ArticleError {
}
